Adds response to submit displays user name

--- a/views/hello.pug
+++ b/views/hello.pug
@@ -1,7 +1,10 @@
 extends layout
 
 block content
-    h2 Hello, student!
+    if name
+        h2 Hello, #{name}!
+    else
+        h2 Hello, student!
     form(action='/hello', method='post')
         label Please enter your name:
             input(type='text', name='username')
