--- a/views/card.pug
+++ b/views/card.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     section#content
-        h2= prompt
+        h2= text
         if hint
             p
                 i Hint : #{hint}
