--- a/views/card.pug
+++ b/views/card.pug
@@ -6,5 +6,10 @@ block content
         if hint
             p
                 i Hint : #{hint}
-        else
-            p (There is no hint.)
+        a(href=`${id}?side=${sideToShow}`)= sideToShowDisplay
+        //if side=question
+        //    form(action='/#?side=answer', method='post')
+        //        button(type='submit') Answer
+        //else
+        //    form(action=/#?side=question, method='post')
+        //        button(type='submit') Question
