Adds next card link

--- a/views/card.pug
+++ b/views/card.pug
@@ -7,6 +7,8 @@ block content
             p
                 i Hint : #{hint}
         a(href=`${id}?side=${sideToShow}`)= sideToShowDisplay
+        br
+        a(href='/cards') Next Card
         //if side=question
         //    form(action='/#?side=answer', method='post')
         //        button(type='submit') Answer
