Adds package 'Design Files'

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,4 @@ extends layout.pug
 block content
     section#content
         p
-            a(href='/cards') Next Card
+            a(href='/cards') Begin!
