--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,19 +1,8 @@
 doctype html
-html(lang='en')
-    head
-        title Flash Cards
-        link(rel='stylesheet' href='stylesheets/style.css')
-    body
-        include includes/header
-        if (name)
-            h2 Welcome, #{name}!
-            form(action='/goodbye', method='post')
-                button(type='submit') Goodbye
+html(lang="en")
+  head
+    title Flash Cards
+    link(rel='stylesheet' href='stylesheets/style.css')
+  body
+    include includes/header
         block content
-        include includes/footer
-
-
-
-                header
-                    img(src='img/logo.png')
-                    p An app to help you study
