--- a/views/error.pug
+++ b/views/error.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     section.desk
         h1= `${error.message} - Status: ${error.status}`
-        img.desk-items(src='img/desk.svg')
+        img.desk-items(src='/img/desk.svg')
         a.button-primary-small(href='hello.html') Go Home
         .paper
             pre.stack-trace= error.stack
