--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -330,7 +330,7 @@ input {
   line-height: 3.15em;
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: pre-wrap;      /* Opera 4-6 */
   white-space: -o-pre-wrap;    /* Opera 7 */
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
   margin-top: 0;
